welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: reassignment to val
    droite = false
           ^ZigZag:20: error: not found: value doite
  else if((getX()==0)&&(doite!))
                        ^ZigZag:23: error: reassignment to val
    droite = true
           ^