welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
def fin(compteur:Int):Boolean =
{
  if(getMondeHauteur()*getMondeLargeur()==compteur+1)
  {
    ecritMessage(compteur)
    return true
  }
  else
  {
    return false
  }
}

def avance2(droite:Boolean):Boolean =
{ 
  if((getX()==getMondeLargeur()-1)&&(droite))
  {
    setPos(getX(),getY()+1)
    droite = false
  }
  else if((getX()==0)&&(doite!))
  {
    setPos(0,getY()+1)
    droite = true
  }
  else if(droite)
  {
    setPos(getX()+1,getY())
  }
  else
  {
    setPos(getX()-1,getY())
  }
  return droite
}

override def run()
{
  var compteur:Int = 0
  var droite:Boolean = true
  
  do
  {
    ecritMessage(compteur)
    droite=avance2(droite)
    compteur = compteur + 1
  }
  while(!fin(compteur))
}